add task update apis
